<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.mohmann.moretodo.activities.DetailActivity"
    tools:showIn="@layout/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_title"
        android:id="@+id/label_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_empty"
        android:id="@+id/text_title"
        android:layout_below="@+id/label_title"
        android:layout_alignStart="@+id/label_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_content"
        android:id="@+id/label_content"
        android:layout_below="@+id/text_title"
        android:layout_alignStart="@+id/text_title"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_empty"
        android:id="@+id/text_content"
        android:layout_below="@+id/label_content"
        android:layout_alignStart="@+id/label_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_created"
        android:id="@+id/label_created"
        android:layout_below="@+id/text_content"
        android:layout_alignStart="@+id/text_content"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_empty"
        android:id="@+id/text_created"
        android:layout_below="@+id/label_created"
        android:layout_alignStart="@+id/label_created" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_done"
        android:id="@+id/label_done"
        android:layout_below="@+id/text_created"
        android:layout_alignStart="@+id/text_created"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="18dp"
        android:minHeight="18dp"
        android:maxWidth="18dp"
        android:maxHeight="18dp"
        android:alpha="0.7"
        android:src="@drawable/ic_clear_black_18dp"
        android:id="@+id/icon_done"
        android:layout_below="@+id/label_done"
        android:layout_alignStart="@+id/label_done" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_finished"
        android:id="@+id/label_finished"
        android:layout_below="@+id/icon_done"
        android:layout_alignStart="@+id/icon_done"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_empty"
        android:id="@+id/text_finished"
        android:layout_below="@+id/label_finished"
        android:layout_alignStart="@+id/label_finished"
        android:visibility="gone" />


</RelativeLayout>
</ScrollView>